Completed auth API && other changes Moved rate limit to API handler Lots of miscellaneous fixes Documentation
